force-app/main/default/objects/SSP_InterfaceDetail__mdt/SSP_InterfaceDetail__mdt.object-meta.xml
<CustomObject>
    <description>Holds information about interface</description>
    <label>Interface Detail</label>
    <pluralLabel>Interface Details</pluralLabel>
</CustomObject>