force-app/main/default/objects/SSP_InterfaceDetail__mdt/fields/Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Name__c</fullName>
    <label>Certificate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>