force-app/main/default/objects/SSP_InterfaceDetail__mdt/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Contains the details of header in JSON format</description>
    <label>Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>