force-app/main/default/objects/SSP_InterfaceDetail__mdt/fields/Is_Debug__c.field-meta.xml
<CustomField>
    <fullName>Is_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field to track Info debugging on Interfaces</inlineHelpText>
    <label>Is Debug</label>
    <type>Checkbox</type>
</CustomField>