force-app/main/default/objects/SSP_InterfaceDetail__mdt/fields/No_of_Retry__c.field-meta.xml
<CustomField>
    <fullName>No_of_Retry__c</fullName>
    <description>To capture the number of Retry for Reverse SSPDC</description>
    <inlineHelpText>Leave blank if not applicable</inlineHelpText>
    <label>No of Retry</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>