force-app/main/default/objects/SSP_InterfaceDetail__mdt/fields/SSP_Method__c.field-meta.xml
<CustomField>
    <fullName>SSP_Method__c</fullName>
    <description>This describes the method type of the interface</description>
    <label>SSP_Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>