force-app/main/default/objects/SSP_InterfaceDetail__mdt/fields/SSP_NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>SSP_NamedCredential__c</fullName>
    <description>Stores the named credential name associated with the interface</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>