force-app/main/default/objects/SSP_InterfaceDetail__mdt/fields/SSP_ServiceClassName__c.field-meta.xml
<CustomField>
    <fullName>SSP_ServiceClassName__c</fullName>
    <description>Stores the name of the service class for this interface</description>
    <label>Service Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>