force-app/main/default/objects/SSP_InterfaceDetail__mdt/fields/Timeout_Miliseconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Miliseconds__c</fullName>
    <description>Contains timeout details in milliseconds</description>
    <label>Timeout (Miliseconds)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>